# spin

./: .fossa.yml  AGENTS.md  CNAME  Cargo.toml  GOVERNANCE.md  IMPL.md  MAINTAINERS.md  Makefile  README.md  build.rs  error.txt  my_changes.patch
.devcontainer/: bootstrap.sh
.github/workflows/: build.yml  bump-wasmtime.yml  finalize-wasmtime.yml  fossa.yml  publish-env-def.yml  publish-wit.yml  release.yml  rust-sdk-release.yml  wasmtime-backport.yml  wasmtime-update.yml
crates/app/: Cargo.toml
crates/app/src/: error.rs  lib.rs  metadata.rs
crates/blobstore-aws-s3/: Cargo.toml
crates/blobstore-aws-s3/src/: lib.rs  store.rs
crates/blobstore-azure/: Cargo.toml
crates/blobstore-azure/src/: lib.rs  store.rs
crates/blobstore-azure/src/store/: auth.rs  incoming_data.rs  object_names.rs
crates/blobstore-fs/: Cargo.toml
crates/blobstore-fs/src/: lib.rs
crates/blobstore-memory/: Cargo.toml
crates/blobstore-s3/: Cargo.toml
crates/blobstore-s3/src/: lib.rs  store.rs
crates/blobstore-s3/src/store/: auth.rs  incoming_data.rs  object_names.rs
crates/capabilities/: Cargo.toml  Makefile  deny_adapter.wasm
crates/common/: Cargo.toml
crates/componentize/: Cargo.toml
crates/compose/: Cargo.toml
crates/connection-semaphore/: Cargo.toml
crates/connection-semaphore/src/: lib.rs
crates/core/: Cargo.toml
crates/dependency-wit/: Cargo.toml
crates/dependency-wit/src/: lib.rs
crates/doctor/: Cargo.toml
crates/env-isolator/: Cargo.toml
crates/env-isolator/src/: core_module.rs  isolator.rs  lib.rs  wrapper.rs
crates/environments/: Cargo.toml
crates/expressions/: Cargo.toml
crates/expressions/src/: lib.rs  provider.rs  template.rs
crates/expressions/tests/: validation_test.rs
crates/factor-blobstore/: Cargo.toml
crates/factor-blobstore/src/: host.rs  lib.rs  runtime_config.rs  util.rs
crates/factor-blobstore/src/cackle_cackle/: mod.rs  write_stream.rs
crates/factor-blobstore/src/host/: container.rs  incoming_value.rs  object_names.rs  outgoing_value.rs
crates/factor-blobstore/src/runtime_config/: spin.rs
crates/factor-blobstore/src/stream/: mod.rs  write_stream.rs
crates/factor-blobstore/tests/: factor_test.rs
crates/factor-key-value/: Cargo.toml
crates/factor-llm/: Cargo.toml
crates/factor-otel/: Cargo.toml
crates/factor-outbound-http/: Cargo.toml
crates/factor-outbound-http/src/: intercept.rs  lib.rs  runtime_config.rs  spin.rs  wasi.rs  wasi_2023_10_18.rs  wasi_2023_11_10.rs  wasi_2026_03_15.rs
crates/factor-outbound-http/src/runtime_config/: spin.rs
crates/factor-outbound-http/tests/: factor_test.rs
crates/factor-outbound-mqtt/: Cargo.toml
crates/factor-outbound-mqtt/src/: allowed_hosts.rs  host.rs  lib.rs  runtime_config.rs
crates/factor-outbound-mqtt/src/runtime_config/: spin.rs
crates/factor-outbound-mqtt/tests/: factor_test.rs
crates/factor-outbound-mysql/: Cargo.toml
crates/factor-outbound-mysql/src/: client.rs  host.rs  lib.rs  runtime_config.rs
crates/factor-outbound-mysql/src/runtime_config/: spin.rs
crates/factor-outbound-mysql/tests/: factor_test.rs
crates/factor-outbound-networking/: Cargo.toml
crates/factor-outbound-pg/: Cargo.toml
crates/factor-outbound-redis/: Cargo.toml
crates/factor-sqlite/: Cargo.toml
crates/factor-variables/: Cargo.toml
crates/factor-wasi/: Cargo.toml
crates/factor-wasi/src/: io.rs  lib.rs  sockets.rs  spin.rs  wasi_2023_10_18.rs  wasi_2023_11_10.rs  wasi_2026_03_15.rs
crates/factor-wasi/tests/: factor_test.rs
crates/factors/: Cargo.toml
crates/factors-derive/: Cargo.toml
crates/factors-executor/: Cargo.toml
crates/factors-test/: Cargo.toml
crates/http/: Cargo.toml
crates/key-value-aws/: Cargo.toml
crates/key-value-azure/: Cargo.toml
crates/key-value-azure/src/: auth.rs  lib.rs  store.rs
crates/key-value-redis/: Cargo.toml
crates/key-value-spin/: Cargo.toml
crates/llm-local/: Cargo.toml
crates/llm-remote-http/: Cargo.toml
crates/loader/: Cargo.toml
crates/manifest/: Cargo.toml
crates/oci/: Cargo.toml
crates/oci/src/: auth.rs  client.rs  lib.rs  loader.rs  utils.rs  validate.rs
crates/routes/: Cargo.toml
crates/runtime-config/: Cargo.toml
crates/runtime-factors/: Cargo.toml
crates/serde/: Cargo.toml
crates/serde/src/: base64.rs  dependencies.rs  id.rs  lib.rs  version.rs
crates/sqlite-inproc/: Cargo.toml
crates/sqlite-inproc/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: alert_in_dev.rs  db.rs  detector.rs  env.rs  lib.rs  logs.rs  metrics.rs  propagation.rs  traces.rs
crates/templates/: Cargo.toml
crates/tls/: Cargo.toml
crates/trigger/: Cargo.toml
crates/trigger-http/: Cargo.toml
crates/trigger-http/src/: headers.rs  instrument.rs  lib.rs  middleware.rs  outbound_http.rs  server.rs  spin.rs  stateful.rs  tls.rs  wagi.rs  wasi.rs  wasip3.rs
crates/variables/: Cargo.toml
crates/variables-azure/: Cargo.toml
crates/variables-azure/src/: lib.rs
crates/variables-env/: Cargo.toml
crates/variables/src/: env.rs  lib.rs
crates/wasi-async/: Cargo.toml
crates/wasi-otel/: Cargo.toml
crates/wasi-otel/src/: common_conversions.rs  conversions.rs  lib.rs  log_conversions.rs  metric_conversions.rs  trace_conversions.rs
crates/world/: Cargo.toml
crates/world/src/: conversions.rs  lib.rs
crates/world/src/wasi_otel/: common_conversions.rs  log_conversions.rs  metric_conversions.rs  mod.rs  trace_conversions.rs
docs/content/: release-notes-template.md
examples/env-var-isolation/: .gitignore  Cargo.toml  README.md  (+1 more)
examples/vault-variable-test/: Cargo.toml  spin.toml
scripts/: build-and-publish-wit.sh  bump-rust-examples-sdk.sh  bump-rust-template-sdk.sh  push-env-def.sh  wasmtime-release.sh
src/: commands.rs  completions.rs  lib.rs  opt_value.rs  opts.rs  parse_env.rs  subprocess.rs
target-envs/: README.md  env-mc-envface.toml  spin-up.3.2.toml  spin-up.3.4.toml
templates/: Makefile
tests/: integration.rs  runtime.rs
tests/test-components/components/wasi-otel-tracing/: Cargo.toml
tests/test-components/components/wasi-otel-tracing/src/: lib.rs
wit/: world.wit
(+424 files in other folders)
