[package]
name = "spin-app"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spin-serde = { path = "../serde" }
thiserror = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
tokio = { workspace = true }