[package]
name = "spin-blobstore-s3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-once-cell = "0.5.4"
# Turn off default features to avoid pulling in "aws-smithy-runtime/default-https-client" which messes up tls provider selection
aws-config = { version = "1.1.7", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-credential-types = "1.1.7"
aws-sdk-s3 = { version = "1.68", default-features = false, features = ["rustls", "rt-tokio"] }
aws-smithy-async = "1.2.5"
bytes = { workspace = true }
futures = { workspace = true }
http-body = "1.0"
http-body-util = "0.1"
object_store = { version = "0.11", features = ["aws"] }
serde = { workspace = true }
spin-core = { path = "../core" }
spin-factor-blobstore = { path = "../factor-blobstore" }
tokio = { workspace = true }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["compat"] }
uuid = { version = "1.0", features = ["v4"] }
wasmtime-wasi = { workspace = true }

[lints]
workspace = true
