[package]
name = "spin-dependency-wit"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
spin-loader = { path = "../loader" }
spin-manifest = { path = "../manifest" }
spin-serde = { path = "../serde" }
tokio = { workspace = true, features = ["fs"] }
wasmparser = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wit-component = { workspace = true, features = ["dummy-module"] }
