[package]
name = "spin-factor-outbound-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "http2"] }
pin-project-lite = { workspace = true }
reqwest = { workspace = true, features = ["gzip"] }
rustls = { workspace = true }
serde = { workspace = true }
spin-factor-otel = { path = "../factor-otel" }
spin-factor-outbound-networking = { path = "../factor-outbound-networking" }
spin-factors = { path = "../factors" }
spin-telemetry = { path = "../telemetry" }
spin-world = { path = "../world" }
terminal = { path = "../terminal" }
tokio = { workspace = true, features = ["net", "rt", "time"] }
tokio-rustls = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
spin-common = { path = "../common" }
spin-factor-variables = { path = "../factor-variables" }
spin-factors-test = { path = "../factors-test" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }

[features]
default = ["spin-cli"]
# Includes the runtime configuration handling used by the Spin CLI
spin-cli = []

[lints]
workspace = true
