[package]
name = "spin-factor-outbound-mysql"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
# Removing default features for mysql_async to remove flate2/zlib feature
mysql_async = { version = "0.35", default-features = false, features = [
  "minimal-rust",
  "native-tls-tls",
] }
opentelemetry-semantic-conventions = { workspace = true }
spin-core = { path = "../core" }
spin-factor-otel = { path = "../factor-otel" }
spin-factor-outbound-networking = { path = "../factor-outbound-networking" }
spin-factors = { path = "../factors" }
spin-resource-table = { path = "../table" }
spin-telemetry = { path = "../telemetry" }
spin-world = { path = "../world" }
spin-wasi-async = { path = "../wasi-async" }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
spin-factor-variables = { path = "../factor-variables" }
spin-factors-test = { path = "../factors-test" }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
