[package]
name = "spin-factor-wasi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
spin-common = { path = "../common" }
spin-connection-semaphore = { path = "../connection-semaphore" }
spin-factors = { path = "../factors" }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
spin-factors-test = { path = "../factors-test" }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
