[package]
name = "spin-key-value-azure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
azure_core = { version = "1.0", default-features = false }
azure_data_cosmos = { version = "0.35", features = ["key_auth"] }
azure_identity = "1.0"
futures = { workspace = true }
serde = { workspace = true }
spin-factor-key-value = { path = "../factor-key-value" }
tokio = { workspace = true, features = ["rt", "sync"] }

[lints]
workspace = true
