[package]
name = "spin-serde"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }

# Without this dependency, this crate will not compile on its own.
# We should figure out why.
futures-util = "0.3.30"
