[package]
name = "spin-serde"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
wasm-pkg-common = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
