[package]
name = "spin-sqlite-inproc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
spin-factor-sqlite = { path = "../factor-sqlite" }
spin-wasi-async = { path = "../wasi-async" }
spin-world = { path = "../world" }
tokio = { workspace = true }

[lints]
workspace = true
