[package]
name = "spin-telemetry"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
http0 = { version = "0.2.9", package = "http" }
http1 = { version = "1.0.0", package = "http" }
opentelemetry = { version = "0.29", features = ["metrics", "trace", "logs"] }
opentelemetry-appender-tracing = "0.29"
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
reqwest = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "spec_unstable_logs_enabled", "spec_unstable_metrics_views", "metrics"] }
terminal = { path = "../terminal" }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "fmt", "ansi", "std", "env-filter", "json", "registry"] }

[features]
testing = []
tracing-log-compat = ["tracing-subscriber/tracing-log", "tracing-opentelemetry/tracing-log"]
# By default, the metrics macros emit their events at the TRACE level. These features raise that
# default to DEBUG or INFO respectively. They are mutually exclusive; enabling both is a compile
# error.
metrics-default-level-debug = []
metrics-default-level-info = []
