[package]
name = "spin-trigger-http"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto"] }
opentelemetry-semantic-conventions = { workspace = true }
pin-project-lite = { workspace = true }
rand.workspace = true
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spin-app = { path = "../app" }
spin-capabilities = { path = "../capabilities" }
spin-componentize = { path = "../componentize" }
spin-compose = { path = "../compose" }
spin-core = { path = "../core" }
spin-factor-otel = { path = "../factor-otel" }
spin-factor-outbound-http = { path = "../factor-outbound-http" }
spin-factor-outbound-networking = { path = "../factor-outbound-networking" }
spin-factor-wasi = { path = "../factor-wasi" }
spin-factors = { path = "../factors" }
spin-factors-executor = { path = "../factors-executor" }
spin-http = { path = "../http" }
spin-telemetry = { path = "../telemetry" }
spin-trigger = { path = "../trigger" }
spin-world = { path = "../world" }
terminal = { path = "../terminal" }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
wac-graph = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[lints]
workspace = true
