[package]
name = "spin-variables-azure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_security_keyvault = { workspace = true }
dotenvy = "0.15"
serde = { workspace = true }
spin-expressions = { path = "../expressions" }
spin-factors = { path = "../factors" }
spin-world = { path = "../world" }
tracing = { workspace = true }

[lints]
workspace = true
