[package]
name = "spin-variables"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_security_keyvault = { workspace = true }
dotenvy = "0.15"
serde = { workspace = true }
spin-expressions = { path = "../expressions" }
spin-factors = { path = "../factors" }
spin-factor-variables = { path = "../factor-variables" }
spin-world = { path = "../world" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
vaultrs = "0.7"

[lints]
workspace = true
