[package]
name = "wasi-otel"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
wasmtime = { workspace = true }
