[package]
name = "wasi-otel"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
base64 = { workspace = true}
