[package]
name = "vault-variable-test"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = "Vault Application Variable Provider Example"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
constant_time_eq = "0.4.2"
spin-sdk = "5.0.0"

[workspace]
