[package]
name = "wasi-otel-tracing"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-wasi = { git = "https://github.com/calebschoepp/opentelemetry-wasi", rev = "700ac3c1fcf67e277b2b03440b79ada47780c2ee" }
spin-sdk = "5.1.1"
wit-bindgen = "0.54.0"
